6번 문제까지 풀고 commit 테스트